--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<link rel="alternate" type="text/turtle" href="profile.ttl"/>
+	<script type="text/turtle" href="profile.ttl"/>
 </head>
 <body>
 	<h1>Hey everyone, this is me!</h1>
