--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link rel="alternate" type="text/turtle" href="profile.ttl"/>
-	<script type="text/turtle" href="profile.ttl"></script>
+	<script type="text/turtle" src="profile.ttl"></script>
 </head>
 <body>
 	<h1>Hey everyone, this is me!</h1>
