--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
 	<link rel="alternate" type="text/turtle" href="profile.ttl"/>
-	<script type="text/turtle" src="profile.ttl"></script>
+	<link rel="alternate" type="application/ld+json" href="webid.json"/>
+	<script type="application/ld+json" src="webid.json"></script>
+	<script type="text/turtle" src="webid.ttl"></script>
 </head>
 <body>
 	<h1>Hey everyone, this is me!</h1>
