--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="alternate" type="text/turtle" href="profile.ttl"/>
+	<link rel="alternate" type="text/turtle" href="webid.ttl"/>
 	<link rel="alternate" type="application/ld+json" href="webid.json"/>
 	<script type="application/ld+json" src="webid.json"></script>
 	<script type="text/turtle" src="webid.ttl"></script>
